--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -70,7 +70,10 @@
       <JFXButton id="_button" fx:id="_prevButton" buttonType="RAISED" layoutX="50.0" layoutY="154.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" text="Previous">
          <font>
             <Font size="14.0" />
-         </font></JFXButton>
+         </font>
+         <tooltip>
+            <Tooltip text="Go to previous name " />
+         </tooltip></JFXButton>
       <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="318.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
          <font>
             <Font size="14.0" />
