--- a/src/application/ShopScene.fxml
+++ b/src/application/ShopScene.fxml
@@ -35,9 +35,9 @@
    <center>
       <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <content>
-            <Pane id="_themePane" prefHeight="384.0" prefWidth="1217.0">
+            <Pane prefHeight="386.0" prefWidth="1208.0">
                <children>
-                  <AnchorPane id="_themePane" layoutX="300.0" layoutY="-1.0" prefHeight="389.0" prefWidth="300.0">
+                  <AnchorPane id="_themePane" layoutX="300.0" prefHeight="390.0" prefWidth="300.0">
                      <children>
                         <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="348.0" prefHeight="36.0" prefWidth="103.0" text="5 points">
                            <font>
@@ -47,7 +47,7 @@
                         <JFXButton id="_button" fx:id="_sunsetThemeButton" buttonType="RAISED" layoutX="74.0" layoutY="280.0" onAction="#sunsetThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Sunset Theme" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane id="_themePane" prefHeight="387.0" prefWidth="300.0">
+                  <AnchorPane id="_themePane" prefHeight="386.0" prefWidth="300.0">
                      <children>
                         <JFXButton id="_button" fx:id="_defaultThemeButton" buttonType="RAISED" layoutX="67.0" layoutY="284.0" onAction="#defaultThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Default Theme" />
                         <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="344.0" prefHeight="36.0" prefWidth="103.0" text="0 points">
@@ -57,7 +57,7 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <AnchorPane id="_themePane" layoutX="600.0" prefHeight="387.0" prefWidth="300.0">
+                  <AnchorPane id="_themePane" layoutX="600.0" layoutY="1.0" prefHeight="388.0" prefWidth="300.0">
                      <children>
                         <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="345.0" prefHeight="36.0" prefWidth="103.0" text="10 points">
                            <font>
@@ -67,14 +67,14 @@
                         <JFXButton id="_button" fx:id="_chocoThemeButton" buttonType="RAISED" layoutX="67.0" layoutY="276.0" onAction="#chocoThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Choco Theme" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane id="_themePane" layoutX="900.0" layoutY="2.0" prefHeight="381.0" prefWidth="300.0">
+                  <AnchorPane id="_themePane" layoutX="900.0" layoutY="1.0" prefHeight="388.0" prefWidth="300.0">
                      <children>
                         <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="345.0" prefHeight="36.0" prefWidth="103.0" text="15 points">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <JFXButton id="_button" fx:id="_darkThemeButton11" buttonType="RAISED" layoutX="67.0" layoutY="276.0" onAction="#darkThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Dark Theme" />
+                        <JFXButton id="_button" fx:id="_darkThemeButton1" buttonType="RAISED" layoutX="67.0" layoutY="276.0" onAction="#darkThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Dark Theme" />
                      </children>
                   </AnchorPane>
                </children>
