--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -70,10 +70,7 @@
       <JFXButton id="_button" fx:id="_prevButton" buttonType="RAISED" layoutX="50.0" layoutY="154.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" text="Previous">
          <font>
             <Font size="14.0" />
-         </font>
-         <tooltip>
-            <Tooltip text="Go to previous name " />
-         </tooltip></JFXButton>
+         </font></JFXButton>
       <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="318.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
          <font>
             <Font size="14.0" />
@@ -158,7 +155,7 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXButton id="_button" fx:id="_loop" layoutX="85.0" layoutY="300.0" onAction="#loopFiles" prefHeight="45.0" prefWidth="168.0" text="Loop">
+      <JFXButton id="_button" fx:id="_loop" buttonType="RAISED" layoutX="85.0" layoutY="300.0" onAction="#loopFiles" prefHeight="45.0" prefWidth="168.0" text="Loop">
          <font>
             <Font size="23.0" />
          </font>
