now the tab is coloured in for selection scene

--- a/src/themes/ChocoSelectionSceneStyleSheet.css
+++ b/src/themes/ChocoSelectionSceneStyleSheet.css
@@ -7,11 +7,14 @@
 #_pane, .scrollPane {
 	-fx-background-color: #382E1C;
 	-fx-background: #453823;
+	-fx-text-fill: #BAA378;
+	-fx-font-fill: #BAA378;
 }
 
 #_checkBoxToggle, #_selectAllToggle {
 	-fx-background-color: #382E1C;
 	-fx-text-fill: #BAA378;
+	-fx-font-fill: #BAA378;
 }
 
 #_tabParent {
@@ -35,5 +38,16 @@
 	-fx-background-color: #453823;
 	-fx-skin: #BAA378;
 }
+
+.tab .tab-label {
+	-fx-background-color: #382E1C;
+	-fx-text-fill: #BAA378;
+}
+
+.tab {
+	-fx-background-color: #382E1C;
+}
+
+
 
 
