--- a/src/themes/SunsetPracticeSceneStyleSheet.css
+++ b/src/themes/SunsetPracticeSceneStyleSheet.css
@@ -25,3 +25,12 @@
 	-fx-background-color: #765285;
 	-fx-skin: #F5AB99;
 }
+
+.tab .tab-label {
+	-fx-background-color: #765285;
+	-fx-text-fill: #F5AB99;
+}
+
+.tab {
+	-fx-background-color: #351C4D;
+}
