--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -39,7 +39,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="99.0" layoutY="386.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
+      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="107.0" layoutY="300.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
          <font>
             <Font size="36.0" />
          </font>
@@ -51,7 +51,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="36.0" layoutY="407.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
+      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="40.0" layoutY="321.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
          <font>
             <Font size="14.0" />
          </font>
@@ -62,7 +62,7 @@
                </font>
             </Tooltip>
          </tooltip></JFXButton>
-      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="165.0" layoutY="407.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="109.0" text="Save">
+      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="169.0" layoutY="321.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="109.0" text="Save">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
@@ -70,7 +70,10 @@
       <JFXButton id="_button" fx:id="_prevButton" buttonType="RAISED" layoutX="50.0" layoutY="154.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" text="Previous">
          <font>
             <Font size="14.0" />
-         </font></JFXButton>
+         </font>
+         <tooltip>
+            <Tooltip text="Go to previous name " />
+         </tooltip></JFXButton>
       <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="318.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
          <font>
             <Font size="14.0" />
@@ -84,7 +87,7 @@
          </tooltip>
       </JFXButton>
       <JFXProgressBar fx:id="_micSensitivityBar" layoutX="137.0" layoutY="506.0" />
-      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="301.0" layoutY="407.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
+      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="290.0" layoutY="321.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
          <font>
             <Font size="14.0" />
          </font>
@@ -155,11 +158,11 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXButton id="_button" fx:id="_loop" buttonType="RAISED" layoutX="85.0" layoutY="300.0" onAction="#loopFiles" prefHeight="45.0" prefWidth="168.0" text="Loop">
+      <JFXButton id="_button" fx:id="_loop" buttonType="RAISED" layoutX="53.0" layoutY="409.0" onAction="#loopFiles" prefHeight="45.0" prefWidth="168.0" text="Loop">
          <font>
             <Font size="23.0" />
          </font>
       </JFXButton>
-      <Spinner fx:id="_loopCount" layoutX="276.0" layoutY="310.0" prefHeight="26.0" prefWidth="57.0" />
+      <Spinner fx:id="_loopCount" layoutX="262.0" layoutY="419.0" prefHeight="26.0" prefWidth="57.0" />
    </children>
 </AnchorPane>
