included anchor-pane into the list in line 7

--- a/src/themes/DarkSelectionSceneStyleSheet.css
+++ b/src/themes/DarkSelectionSceneStyleSheet.css
@@ -4,7 +4,7 @@
 	-fx-text-fill: red;
 }
 
-#_pane, .scroll-pane {
+#_pane, .scroll-pane, .anchor-pane {
 	-fx-background-color: rgb(50, 50,50);
 	-fx-background: rgb(50, 50, 50);
 	-fx-text-fill: red;
