--- a/src/themes/SunsetSelectionSceneStyleSheet.css
+++ b/src/themes/SunsetSelectionSceneStyleSheet.css
@@ -4,7 +4,7 @@
 	-fx-text-fill: #F5AB99;
 }
 
-#_pane, .scrollPane {
+#_pane {
 	-fx-background-color: #351C4D;
 	-fx-background: #351C4D;
 	-fx-text-fill: #F5AB99;
