now the checkcomboboxes are colour coded

--- a/src/themes/DarkSelectionSceneStyleSheet.css
+++ b/src/themes/DarkSelectionSceneStyleSheet.css
@@ -5,6 +5,8 @@
 }
 
 #_pane {
+	-fx-color: rgb(50, 50, 50);
+	color: rgb(50, 50, 50);
 	-fx-background-color: rgb(50, 50,50);
 	-fx-background: rgb(50, 50, 50);
 	-fx-text-fill: red;
