--- a/src/themes/ChocoSelectionSceneStyleSheet.css
+++ b/src/themes/ChocoSelectionSceneStyleSheet.css
@@ -5,6 +5,8 @@
 }
 
 #_pane {
+	-fx-color: #453823;
+	color: #382E1C;
 	-fx-background-color: #382E1C;
 	-fx-background: #453823;
 	-fx-text-fill: #BAA378;
