--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane id="_pane" fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" stylesheets="@../themes/SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane id="_pane" fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" stylesheets="@../themes/SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <JFXTabPane id="_pane">
          <tabs>
@@ -28,8 +28,8 @@
                      <children>
                         <VBox id="_pane" layoutY="-8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
                            <children>
-                              <ScrollPane id="_pane" fx:id="_practiceListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" />
-                              <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="284.0" text="Select All">
+                              <ScrollPane id="_pane" fx:id="_practiceListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="311.0" />
+                              <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="311.0" text="Select All">
                                  <tooltip>
                                     <Tooltip text="Select all names from list" />
                                  </tooltip></JFXCheckBox>
@@ -148,21 +148,18 @@
             </Pane>
             <Pane id="_background" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0">
                <children>
-                  <HBox layoutX="30.0" layoutY="99.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0">
+                  <HBox layoutX="30.0" layoutY="99.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0">
                      <children>
-                        <JFXButton id="_button" fx:id="_uploadButton" buttonType="RAISED" onAction="#uploadClicked" prefHeight="39.0" prefWidth="124.0" text="Upload">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
+                        <JFXButton id="_button" fx:id="_uploadButton" buttonType="RAISED" onAction="#uploadClicked" prefHeight="39.0" prefWidth="124.0" text="Upload Names">
                            <tooltip>
                               <Tooltip text="Upload list via text file" />
                            </tooltip>
                         </JFXButton>
-                        <JFXButton id="_button" buttonType="RAISED" onAction="#AddToDatabaseClicked" prefHeight="38.0" prefWidth="137.0" text="Add To Database">
+                        <JFXButton id="_button" buttonType="RAISED" onAction="#AddToDatabaseClicked" prefHeight="38.0" prefWidth="131.0" text="Extend Database">
                            <tooltip>
                               <Tooltip text="Add seached name to list" />
                            </tooltip></JFXButton>
-                        <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" onAction="#saveSessionClicked" prefHeight="36.0" prefWidth="112.0" text="Save Session">
+                        <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" onAction="#saveSessionClicked" prefHeight="36.0" prefWidth="122.0" text="Save Session">
                            <tooltip>
                               <Tooltip text="Save current theme and points" />
                            </tooltip></JFXButton>
@@ -171,7 +168,7 @@
                </children>
             </Pane>
             <Label id="_label" fx:id="_databaseFileCount" text="Database File:  " AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" />
-            <ImageView id="_image" fx:id="_shopButton" fitHeight="54.0" fitWidth="53.0" layoutX="27.0" layoutY="25.0" onMouseClicked="#shopClicked">
+            <ImageView id="_image" fx:id="_shopButton" fitHeight="44.0" fitWidth="44.0" layoutX="27.0" layoutY="25.0" onMouseClicked="#shopClicked">
                <image>
                   <Image url="@../images/Trolley.png" />
                </image>
