--- a/src/themes/ChocoPracticeSceneStyleSheet.css
+++ b/src/themes/ChocoPracticeSceneStyleSheet.css
@@ -1,5 +1,5 @@
 #_button {
-	-fx-background-color: #453823;
+	-fx-background-color: #65350F;
 	-fx-text-fill: #BAA378;
 	-fx-accent: #BAA378;
 }
@@ -34,5 +34,5 @@
 }
 
 .tab {
-	-fx-background-color: 382E1C;
+	-fx-background-color: #382E1C;
 }
