--- a/src/themes/ChocoSelectionSceneStyleSheet.css
+++ b/src/themes/ChocoSelectionSceneStyleSheet.css
@@ -1,14 +1,14 @@
 #_button {
 	
-	-fx-background-color: #453823;
+	-fx-background-color: #65350F;
 	-fx-text-fill: #BAA378;
 }
 
 #_pane {
-	-fx-color: #453823;
+	-fx-color: #382E1C;
 	color: #382E1C;
 	-fx-background-color: #382E1C;
-	-fx-background: #453823;
+	-fx-background: #382E1C;
 	-fx-text-fill: #BAA378;
 	-fx-font-fill: #BAA378;
 }
