--- a/src/themes/ChocoShopSceneStyleSheet.css
+++ b/src/themes/ChocoShopSceneStyleSheet.css
@@ -3,7 +3,7 @@
 }
 
 #_button {
-	-fx-background-color: #453823;
+	-fx-background-color: #65350F;
 	-fx-text-fill: #BAA378;
 }
 
@@ -13,7 +13,7 @@
 }
 
 #_themePane {
-	-fx-background-color: #382E1C;
+	-fx-background-color: #453823;
 }
 
 
