--- a/src/themes/SunsetShopSceneStyleSheet.css
+++ b/src/themes/SunsetShopSceneStyleSheet.css
@@ -3,7 +3,7 @@
 }
 
 #_button {
-	-fx-background-color: #765285;
+	-fx-background-color: #AB537C;
 	-fx-text-fill: #F5AB99;
 }
 
@@ -13,7 +13,7 @@
 }
 
 #_themePane {
-	-fx-background-color: #351C4D;
+	-fx-background-color: #765285;
 }
 
 
