--- a/src/themes/DarkShopSceneStyleSheet.css
+++ b/src/themes/DarkShopSceneStyleSheet.css
@@ -3,17 +3,17 @@
 }
 
 #_button {
-	-fx-background-color: rgb(50, 50, 50, 0.9);
-	-fx-text-fill: red;
+	-fx-background-color: #3C373D;
+	-fx-text-fill: #F92F08;
 }
 
 #_label {
 	-fx-background-color: black;
-	-fx-text-fill: red;
+	-fx-text-fill: #F92F08;
 }
 
 #_themePane {
-	-fx-background-color: black;
+	-fx-background-color: rgb(50, 50, 50);
 }
 
 
