--- a/src/themes/DarkShopSceneStyleSheet.css
+++ b/src/themes/DarkShopSceneStyleSheet.css
@@ -8,12 +8,17 @@
 }
 
 #_label {
-	-fx-background-color: black;
+	-fx-background-color: rgb(50, 50, 50);
 	-fx-text-fill: #F92F08;
 }
 
 #_themePane {
 	-fx-background-color: rgb(50, 50, 50);
+}
+
+#_pointLabel {
+	-fx-background-color: black;
+	-fx-text-fill: #F92F08;
 }
 
 
