--- a/src/themes/SunsetShopSceneStyleSheet.css
+++ b/src/themes/SunsetShopSceneStyleSheet.css
@@ -8,7 +8,7 @@
 }
 
 #_label {
-	-fx-background-color: #351C4D;
+	-fx-background-color: #765285;
 	-fx-text-fill: #F5AB99;
 }
 
@@ -16,4 +16,7 @@
 	-fx-background-color: #765285;
 }
 
-
+#_pointLabel {
+	-fx-background-color: #351C4D;
+	-fx-text-fill: #F5AB99;
+}
