gave css id to save session to fix bug

--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -159,7 +159,7 @@
                            <tooltip>
                               <Tooltip text="Add name to the database" />
                            </tooltip></JFXButton>
-                        <JFXButton id="_button" buttonType="RAISED" onAction="#saveSessionClicked" prefHeight="36.0" prefWidth="112.0" text="Save Session">
+                        <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" onAction="#saveSessionClicked" prefHeight="36.0" prefWidth="112.0" text="Save Session">
                            <tooltip>
                               <Tooltip text="Save the current session" />
                            </tooltip></JFXButton>
